--- a/cmd/muxgen/mux.cfg
+++ b/cmd/muxgen/mux.cfg
@@ -2,13 +2,13 @@
 // format:
 // input regexp : type [a|v|s] : language : output group suffix : output suffix
 
-(?i)^(.*)_SD\..*$ : v ::: _sd_
-(?i)^(.*)_HD\..*$ : v ::: _hd_
-(?i)^(.*)_4K\..*$ : v ::: _4k_
+(?i)^(.*)_SD(?\:-cut)?\..*$ : v ::: _sd_
+(?i)^(.*)_HD(?\:-cut)?\..*$ : v ::: _hd_
+(?i)^(.*)_4K(?\:-cut)?\..*$ : v ::: _4k_
 
-(?i)^(.*)_AUDIORUS20\..*$ : a : rus : _a : r2
-(?i)^(.*)_AUDIORUS51\..*$ : a : rus : _a : r6
-(?i)^(.*)_AUDIOENG20\..*$ : a : eng : _a : e2
-(?i)^(.*)_AUDIOENG51\..*$ : a : eng : _a : e6
+(?i)^(.*)_AUDIORUS20-ebur128\..*$ : a : rus : _a : r2
+(?i)^(.*)_AUDIORUS51-ebur128\..*$ : a : rus : _a : r6
+(?i)^(.*)_AUDIOENG20-ebur128\..*$ : a : eng : _a : e2
+(?i)^(.*)_AUDIOENG51-ebur128\..*$ : a : eng : _a : e6
 
 (?i)^(.*)_SUB\..*$ : s : rus : _s : r
