muxgen: small improvements in mux.cfg sample config

--- a/cmd/muxgen/mux.cfg
+++ b/cmd/muxgen/mux.cfg
@@ -1,10 +1,12 @@
 
 // format:
 // input regexp : type [a|v|s] : language : output group suffix : output suffix
+//
+// to use ':' in strings it must be escaped '\:'
 
-(?i)^(.*)_SD(?\:-cut)?\..*$ : v ::: _sd_
-(?i)^(.*)_HD(?\:-cut)?\..*$ : v ::: _hd_
-(?i)^(.*)_4K(?\:-cut)?\..*$ : v ::: _4k_
+(?i)^(.*)_SD(?\:-cut)?\..*$ : v :: _ : _sd
+(?i)^(.*)_HD(?\:-cut)?\..*$ : v :: _ : _hd
+(?i)^(.*)_4K(?\:-cut)?\..*$ : v :: _ : _4k
 
 (?i)^(.*)_AUDIORUS20-ebur128\..*$ : a : rus : _a : r2
 (?i)^(.*)_AUDIORUS51-ebur128\..*$ : a : rus : _a : r6
