muxgen: add title arg to config

--- a/cmd/muxgen/mux.cfg
+++ b/cmd/muxgen/mux.cfg
@@ -1,16 +1,17 @@
 
 // format:
-// input regexp : type [a|v|s] : language : output group suffix : output suffix
+// input regexp : type [a|v|s] : language : title : output group suffix : output suffix
+// if <language> or <title> is empty then it does not insert any metainfo
 //
 // to use ':' in strings it must be escaped '\:'
 
-(?i)^(.*)_SD(?\:-cut)?\..*$ : v :: _ : _sd
-(?i)^(.*)_HD(?\:-cut)?\..*$ : v :: _ : _hd
-(?i)^(.*)_4K(?\:-cut)?\..*$ : v :: _ : _4k
+(?i)^(.*)_SD(?\:-cut)?\..*$ : v ::: _ : _sd
+(?i)^(.*)_HD(?\:-cut)?\..*$ : v ::: _ : _hd
+(?i)^(.*)_4K(?\:-cut)?\..*$ : v ::: _ : _4k
 
-(?i)^(.*)_AUDIORUS20-ebur128\..*$ : a : rus : _a : r2
-(?i)^(.*)_AUDIORUS51-ebur128\..*$ : a : rus : _a : r6
-(?i)^(.*)_AUDIOENG20-ebur128\..*$ : a : eng : _a : e2
-(?i)^(.*)_AUDIOENG51-ebur128\..*$ : a : eng : _a : e6
+(?i)^(.*)_AUDIORUS20-ebur128\..*$ : a : rus :: _a : r2
+(?i)^(.*)_AUDIORUS51-ebur128\..*$ : a : rus :: _a : r6
+(?i)^(.*)_AUDIOENG20-ebur128\..*$ : a : eng :: _a : e2
+(?i)^(.*)_AUDIOENG51-ebur128\..*$ : a : eng :: _a : e6
 
-(?i)^(.*)_SUB\..*$ : s : rus : _s : r
+(?i)^(.*)_SUB\..*$ : s : rus :: _s : r
